[package]
name = "floem-css-macros"
version.workspace = true
edition = "2021"
repository = "https://github.com/aalhitennf/floem-css"
description = "Macros for floem-css"
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.87"
smallvec = { workspace = true }
