[package]
name = "floem-css-parser"
version.workspace = true
edition = "2021"
repository = "https://github.com/aalhitennf/floem-css"
description = "Css parser for floem-css"
license.workspace = true

[dependencies]
log.workspace = true
smallvec.workspace = true
floem.workspace = true
floem-css-macros = { path = "../macro", version = "0.2.0" }
